--- a/style/header.css
+++ b/style/header.css
@@ -56,7 +56,7 @@
     bottom: -5px;
     left: 0;
     border-radius: 20px;
-    background: url(/assets/active.svg)no-repeat;
+    background: url(/Gaming-Platform/assets/active.svg)no-repeat;
     transition: width 0.3s ease-in;
 }
 
@@ -133,7 +133,7 @@
     text-align: center;
 }
 
-/* Мобильное меню */
+
 .menu-toggle {
     display: none;
     flex-direction: column;
@@ -152,7 +152,7 @@
     transition: all 0.3s ease;
 }
 
-/* Медиа-запросы */
+
 @media screen and (min-width: 768px) {
     .header {
         padding: 25px 32px;
@@ -271,4 +271,5 @@
         padding: 10px 20px;
         font-size: 14px;
     }
+
 }
